# exa

./: Cargo.toml
src/: main.rs
src/fs/: file.rs  filter.rs
src/options/: parser.rs
src/output/render/: groups.rs
