[package]
name = "exa"
version = "0.9.0"
authors = [ "Benjamin Sago <ogham@bsago.me>" ]
build = "build.rs"
edition = "2018"

description = "A modern replacement for ls"
homepage = "https://the.exa.website/"
repository = "https://github.com/ogham/exa"
documentation = "https://github.com/ogham/exa"

readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["ls", "files", "command-line"]
license = "MIT"
exclude = ["/devtools/*", "/Justfile", "/Vagrantfile", "/screenshots.png"]


[[bin]]
name = "exa"

[patch.crates-io]
datetime = { path = "./datetime" }
scoped_threadpool = { path = "./scoped-threadpool-rs" }

[dependencies]
ansi_term = "0.12"
datetime = { path = "./datetime" }
glob = "0.3"
lazy_static = "1.3"
libc = "0.2"
locale = "0.2"
log = "0.4"
natord = "1.0"
num_cpus = "1.10"
number_prefix = "0.4"
scoped_threadpool = "0.1"
term_grid = "0.1"
term_size = "0.3"
unicode-width = "0.1"
zoneinfo_compiled = "0.5"

[target.'cfg(not(target_os = "wasi"))'.dependencies]
users = "0.11"

[target.'cfg(target_os = "wasi")'.dependencies]
users_stub = { path = "./rust-users", package = "users" }


[dependencies.git2]
version = "0.13"
optional = true
default-features = false

[build-dependencies]
datetime = { path = "./datetime" }

[features]
default = [ "git" ]
git = [ "git2" ]
vendored-openssl = ["git2/vendored-openssl"]

[profile.release]
opt-level = 3
debug = false
lto = true
panic = "abort"


[package.metadata.deb]
license-file = [ "LICENCE" ]
depends = "$auto"
extended-description = """
exa is a replacement for ls written in Rust.
"""
section = "utils"
priority = "optional"
assets = [
    [ "target/release/exa", "/usr/bin/exa", "0755" ],
    [ "contrib/man/exa.1", "/usr/share/man/man1/exa.1", "0644" ],
    [ "contrib/completions.bash", "/etc/bash_completion.d/exa", "0644" ],
]
